# rboids

./: Cargo.toml  LICENSE  README.md  rust-toolchain.toml
benches/: my_benchmark.rs
src/: boid.rs  lib.rs  main.rs
