[package]
name = "rboids"
version = "0.1.0"
authors = ["Ishan Bhanuka <bhanuka.ishan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
three = "0.4.0"
ncollide3d = "0.23.0"
rand = "0.7.3"
rand_distr = "0.2.2"
